Styles/homepage fix (#98)
* Update README.md

* removed extra space on home page and slideshow

--- a/src/components/pages/my-plants/styles/MyPlantPage.css
+++ b/src/components/pages/my-plants/styles/MyPlantPage.css
@@ -6,7 +6,7 @@
 body {
     font-family: 'PT Sans', sans-serif;
     background-image: linear-gradient(to top, #25282a 60%, #111411 100%);
-    height: 100em;
+    height: 100vh;
 
 .helloDiv {
     text-align: center;
